tests/errors/type-error-swap.ja
procedure main()
    int x
    stack s
    x <=> s
